--- a/ForumAppDemo/Views/Posts/All.cshtml
+++ b/ForumAppDemo/Views/Posts/All.cshtml
@@ -25,7 +25,8 @@
                             <a asp-controller="Posts" asp-action="Edit" asp-route-id="@post.Id" class="btn btn-warning">Edit</a>
                             <form class="mt-2" asp-controller="Posts" asp-action="Delete" asp-route-id="@post.Id">
                                 <div class="d-grid gap-2">
-                                    <input type="submit" value="Delete" class="btn btn-danger mb-2" />
+                                    <input type="submit" value="Delete" class="btn btn-danger mb-2" 
+                                        onclick="return confirm('Are you sure you want to delere post: @post.Title')"/>
                                 </div>
                             </form>
                         </div>
